# demo-vector

./: .gitignore  Cargo.toml  README.md  config.yaml
resources/: tables.rs
schemas/: vector.graphql
source/: index.html  package-lock.json  package.json  vite.config.ts
source/src/: App.tsx  index.css  main.tsx  vite-env.d.ts  yeti.css
source/src/components/: LoginPage.tsx
source/src/hooks/: useAuth.ts
source/src/pages/: Login.tsx  VectorPage.tsx
source/src/styles/: index.css  login.css
src/: lib.rs
