# Cargo manifest for demo-vector — Phase 48 static-crate shape.
#
# Dual-mode during the dylib → static migration window. yeti-compiler
# reads only [dependencies] when building the dylib (retiring in
# Phase 48 slice 5); cargo uses the full file when building the static
# library this crate compiles to.

[package]
name = "demo-vector"
version = "0.1.0"
edition = "2024"
description = "Automatic text-to-vector embedding with HNSW nearest-neighbor semantic search"

[lib]
name = "demo_vector"
path = "src/lib.rs"

[workspace]

[dependencies]
yeti-sdk = { path = "../../../Developer/yeti/crates/yeti-sdk", features = ["workspace"] }
serde_json = "1"
